--- a/kmkim/pom.xml
+++ b/kmkim/pom.xml
@@ -43,7 +43,7 @@
              <plugins>
                    <plugin>
                          <groupId> org.springframework.boot</groupId >
-                         <artifactId> spring-boot-maven -plugin</artifactId >
+                         <artifactId> spring-boot-maven-plugin</artifactId >
                    </plugin>
              </plugins>
        </build>
